# ai-doc-gen

./: .dockerignore  .env.sample  .gitignore  Dockerfile  LICENSE  README.fa.md  README.md  config_example.yaml  pyproject.toml
.ai/: config.yaml
.ai/docs/: api_analysis.md  data_flow_analysis.md  dependency_analysis.md  request_flow_analysis.md  structure_analysis.md
.github/workflows/: config.yml  generate_docs.yml
docs/: ci_template_github_actions.yml
src/: config.py  main.py
src/agents/: __init__.py  analyzer.py  documenter.py
src/agents/prompts/: analyzer.yaml  documenter.yaml
src/agents/tools/: __init__.py
src/agents/tools/dir_tool/: __init__.py  list_files.py
src/agents/tools/file_tool/: __init__.py  file_reader.py
src/handlers/: analyze.py  base_handler.py  cronjob.py  readme.py
src/utils/: __init__.py  dict.py  logger.py  prompt_manager.py  repo.py  retry_client.py
src/utils/custom_models/: gemini_provider.py
